# parakeet.cpp

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
benchmarks/: BENCHMARK.md  diverse_manifest.tsv  librispeech_manifest.tsv
benchmarks/results/: parakeet-ctc-0.6b.json  parakeet-ctc-1.1b.json  parakeet-rnnt-0.6b.json  parakeet-rnnt-1.1b.json  parakeet-tdt-0.6b-v2.json  parakeet-tdt-0.6b-v3.json  parakeet-tdt-1.1b.json  parakeet-tdt_ctc-1.1b.json  parakeet-tdt_ctc-110m.json  parakeet_realtime_eou_120m-v1.json  threads.json
benchmarks/results_gpu/: p1_nemo_ctc-0.6b.json  p1_nemo_ctc-1.1b.json  p1_nemo_realtime_eou_120m-v1.json  p1_nemo_rnnt-0.6b.json  p1_nemo_rnnt-1.1b.json  p1_nemo_tdt-0.6b-v2.json  p1_nemo_tdt-0.6b-v3.json  p1_nemo_tdt-1.1b.json  p1_nemo_tdt_ctc-1.1b.json  p1_nemo_tdt_ctc-110m.json  p1_ours_ctc-0.6b.json  p1_ours_ctc-0.6b_f16.json  p1_ours_ctc-1.1b.json  p1_ours_ctc-1.1b_f16.json  p1_ours_realtime_eou_120m-v1.json  p1_ours_realtime_eou_120m-v1_f16.json  p1_ours_rnnt-0.6b.json  p1_ours_rnnt-0.6b_f16.json  p1_ours_rnnt-1.1b.json  p1_ours_rnnt-1.1b_f16.json  p1_ours_tdt-0.6b-v2.json  p1_ours_tdt-0.6b-v2_f16.json  p1_ours_tdt-0.6b-v3.json  p1_ours_tdt-0.6b-v3_f16.json  p1_ours_tdt-1.1b.json  p1_ours_tdt-1.1b_f16.json  p1_ours_tdt_ctc-1.1b.json  p1_ours_tdt_ctc-1.1b_f16.json  p1_ours_tdt_ctc-110m.json  p1_ours_tdt_ctc-110m_f16.json  p2_nemo_ctc-0.6b.json  p2_nemo_ctc-1.1b.json  p2_nemo_realtime_eou_120m-v1.json  p2_nemo_rnnt-0.6b.json  p2_nemo_rnnt-1.1b.json  p2_nemo_tdt-0.6b-v2.json  p2_nemo_tdt-0.6b-v3.json  p2_nemo_tdt-1.1b.json  p2_nemo_tdt_ctc-1.1b.json  p2_nemo_tdt_ctc-110m.json  (+50 more)
benchmarks/results_preopt/: parakeet-ctc-0.6b.json  parakeet-ctc-1.1b.json  parakeet-rnnt-0.6b.json  parakeet-rnnt-1.1b.json  parakeet-tdt-0.6b-v2.json  parakeet-tdt-0.6b-v3.json  parakeet-tdt-1.1b.json  parakeet-tdt_ctc-1.1b.json  parakeet-tdt_ctc-110m.json  parakeet_realtime_eou_120m-v1.json  threads.json
benchmarks/results_whisper/: cpu_base.en.json  cpu_large-v3-turbo.json  cpu_parakeet_tdt-0.6b-v2.json  cpu_parakeet_tdt-1.1b.json  cpu_parakeet_tdt_ctc-110m.json  gpu_base.en.json  gpu_large-v3-turbo.json
docs/: conversion.md  parity.md  quantization.md
examples/cli/: CMakeLists.txt  main.cpp
examples/server/: main.cpp  openai_format.cpp
include/: parakeet.h  parakeet_capi.h
models/: MANIFEST.md
scripts/: _nemo_bench_pass.py  apply_ggml_patches.sh  asr_metrics.py  bench_data.py  bench_metal_dw.sh  bench_whisper.py  benchmark.py  convert_parakeet_to_gguf.py  gen_benchmark_md.py  gen_nemo_baseline.py  gen_stream_baseline.py  plot_benchmark.py  plot_gpu.py  plot_vs_whisper.py  publish_hf.py  requirements.txt  validate_vs_nemo.py
src/: audio_io.cpp  audio_io.hpp  backend.cpp  backend.hpp  common.hpp  conformer.cpp  conformer.hpp  ctc_decoder.cpp  ctc_decoder.hpp  decode_types.hpp  encoder.cpp  encoder.hpp  fft.cpp  fft.hpp  ggml_graph.cpp  ggml_graph.hpp  graph_builder.hpp  joint.cpp  joint.hpp  mel.cpp  mel.hpp  mel_gpu.cpp  mel_gpu.hpp  model.cpp  model.hpp  model_loader.cpp  model_loader.hpp  parakeet.cpp  parakeet_capi.cpp  pos_enc.cpp  pos_enc.hpp  prediction.cpp  prediction.hpp  relpos_attention.cpp  relpos_attention.hpp  rnnt.cpp  rnnt.hpp  search.cpp  search.hpp  streaming.cpp  (+13 more)
tests/: CMakeLists.txt  parity.hpp  test_audio_io.cpp  test_capi.cpp  test_capi_stream.cpp  test_capi_timestamps.cpp  test_conformer.cpp  test_conv_eou.cpp  test_ctc.cpp  test_encoder.cpp  test_encoder_eou.cpp  test_fft.cpp  test_joint.cpp  test_mel.cpp  test_mel_gpu.cpp  test_model_loader.cpp  test_prediction.cpp  test_prediction_step.cpp  test_relpos_attention.cpp  test_server_format.cpp  test_smoke.cpp  test_streaming_decode.cpp  test_streaming_encoder.cpp  test_streaming_mel.cpp  test_subsampling.cpp  test_tdt_greedy.cpp  test_timestamps.cpp  test_timestamps_tokens.cpp  test_tokenizer.cpp  test_transcribe.cpp  test_transcribe_0_6b.cpp  test_transcribe_ctc.cpp  test_transcribe_eou.cpp  test_transcribe_rnnt.cpp  test_transcribe_speech.cpp  test_transcribe_tdt.cpp  test_transducer_core.cpp
tests/python/: check_baseline.py  check_convert.py
